{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 58,
  "lineage": "9d96cfb0-3478-9b0c-54be-6c5963e6aa17",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "grafana",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "monitoring/grafana",
            "metadata": [
              {
                "annotations": {
                  "kubernetes.io/ingress.class": "traefik"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "grafana",
                "namespace": "monitoring",
                "resource_version": "23356",
                "uid": "8439e19e-1e8a-425d-ae3b-7b59c9e47f3f"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "grafana.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "grafana",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 3000
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "72.60.206.107"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_namespace.monitoring",
            "kubernetes_service.grafana"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "minio",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "prod/minio",
            "metadata": [
              {
                "annotations": {
                  "kubernetes.io/ingress.class": "traefik"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "minio",
                "namespace": "prod",
                "resource_version": "27267",
                "uid": "c1e96b1b-11d3-4de0-b0ac-dce9f0d969fb"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "minio.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "minio",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 9001
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "72.60.206.107"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_namespace.prod",
            "kubernetes_service.minio"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "n8n",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "apps/n8n",
            "metadata": [
              {
                "annotations": {
                  "kubernetes.io/ingress.class": "traefik"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "n8n",
                "namespace": "apps",
                "resource_version": "23331",
                "uid": "12e502e6-9ea2-4297-9a71-9b738ce13413"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "n8n.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "n8n",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 5678
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "72.60.206.107"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_namespace.apps",
            "kubernetes_service.n8n"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "portainer",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "monitoring/portainer",
            "metadata": [
              {
                "annotations": {
                  "kubernetes.io/ingress.class": "traefik"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "portainer",
                "namespace": "monitoring",
                "resource_version": "23339",
                "uid": "92cd7500-698e-4fa1-b3b7-6c7d4184a895"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "portainer.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "portainer",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 9000
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "72.60.206.107"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_namespace.monitoring",
            "kubernetes_service.portainer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "monitoring/prometheus",
            "metadata": [
              {
                "annotations": {
                  "kubernetes.io/ingress.class": "traefik"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "prometheus",
                "namespace": "monitoring",
                "resource_version": "23332",
                "uid": "4e679f7e-dce6-4012-9aa4-f39b27fce16e"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "prometheus.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "prometheus",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 9090
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "72.60.206.107"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_namespace.monitoring",
            "kubernetes_service.prometheus"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "apps",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "apps",
            "metadata": [
              {
                "generation": 0,
                "name": "apps",
                "resource_version": "25379",
                "uid": "478523d7-fa84-4b26-a854-66bb6ccb16a8"
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "monitoring",
            "metadata": [
              {
                "generation": 0,
                "name": "monitoring",
                "resource_version": "25378",
                "uid": "4731f5bd-0d72-4ab7-b3c2-855d87f51bbf"
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "prod",
            "metadata": [
              {
                "generation": 0,
                "name": "prod",
                "resource_version": "25381",
                "uid": "f7768633-a087-44b7-8d79-2e5070647150"
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "grafana",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "monitoring/grafana",
            "metadata": [
              {
                "generation": 0,
                "name": "grafana",
                "namespace": "monitoring",
                "resource_version": "23323",
                "uid": "6bd5c1ed-0fcf-41c7-bad0-dcec3327e97f"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.54.88",
                "cluster_ips": [
                  "10.43.54.88"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 3000,
                    "protocol": "TCP",
                    "target_port": "3000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "grafana"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.monitoring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "graylog",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "prod/graylog",
            "metadata": [
              {
                "generation": 0,
                "name": "graylog",
                "namespace": "prod",
                "resource_version": "23288",
                "uid": "3a1a55b3-0037-468f-85d2-76cd5ebdb89e"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.208.206",
                "cluster_ips": [
                  "10.43.208.206"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "web",
                    "node_port": 30900,
                    "port": 9000,
                    "protocol": "TCP",
                    "target_port": "9000"
                  },
                  {
                    "name": "syslog-tcp",
                    "node_port": 30514,
                    "port": 5514,
                    "protocol": "TCP",
                    "target_port": "5514"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "graylog"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "minio",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "prod/minio",
            "metadata": [
              {
                "generation": 0,
                "name": "minio",
                "namespace": "prod",
                "resource_version": "25387",
                "uid": "0b4bae06-7492-414d-8326-6b7da8b9a8cc"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.179.89",
                "cluster_ips": [
                  "10.43.179.89"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "api",
                    "node_port": 0,
                    "port": 9000,
                    "protocol": "TCP",
                    "target_port": "9000"
                  },
                  {
                    "name": "console",
                    "node_port": 0,
                    "port": 9001,
                    "protocol": "TCP",
                    "target_port": "9001"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "minio"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "mongodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "prod/mongodb",
            "metadata": [
              {
                "generation": 0,
                "name": "mongodb",
                "namespace": "prod",
                "resource_version": "23274",
                "uid": "3887caff-932b-431f-944d-d45ad5d51706"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.34.207",
                "cluster_ips": [
                  "10.43.34.207"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 27017,
                    "protocol": "TCP",
                    "target_port": "27017"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "mongodb"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "n8n",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "apps/n8n",
            "metadata": [
              {
                "generation": 0,
                "name": "n8n",
                "namespace": "apps",
                "resource_version": "23266",
                "uid": "a29804b0-a83e-4ce8-8244-3e69592e1981"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.36.147",
                "cluster_ips": [
                  "10.43.36.147"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 5678,
                    "protocol": "TCP",
                    "target_port": "5678"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "n8n"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.apps"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "nextcloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "prod/nextcloud",
            "metadata": [
              {
                "generation": 0,
                "name": "nextcloud",
                "namespace": "prod",
                "resource_version": "23271",
                "uid": "4bdaba75-d86e-4fb1-8342-210296e4115b"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.118.32",
                "cluster_ips": [
                  "10.43.118.32"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 30080,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "nextcloud"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "opensearch",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "prod/opensearch",
            "metadata": [
              {
                "generation": 0,
                "name": "opensearch",
                "namespace": "prod",
                "resource_version": "23267",
                "uid": "04a20c04-a630-48c8-9c6c-0fa9ab57fa3c"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.162.180",
                "cluster_ips": [
                  "10.43.162.180"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 9200,
                    "protocol": "TCP",
                    "target_port": "9200"
                  },
                  {
                    "name": "transport",
                    "node_port": 0,
                    "port": 9300,
                    "protocol": "TCP",
                    "target_port": "9300"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "opensearch"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "portainer",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "monitoring/portainer",
            "metadata": [
              {
                "generation": 0,
                "name": "portainer",
                "namespace": "monitoring",
                "resource_version": "23320",
                "uid": "86dc717e-a3e8-4884-8fec-77f4c010f95b"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.75.56",
                "cluster_ips": [
                  "10.43.75.56"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 9000,
                    "protocol": "TCP",
                    "target_port": "9000"
                  },
                  {
                    "name": "edge",
                    "node_port": 0,
                    "port": 8000,
                    "protocol": "TCP",
                    "target_port": "8000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "portainer"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.monitoring"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "monitoring/prometheus",
            "metadata": [
              {
                "generation": 0,
                "name": "prometheus",
                "namespace": "monitoring",
                "resource_version": "23273",
                "uid": "b5fd65b5-0556-45c3-8fa1-d9f24533a9dd"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.67.193",
                "cluster_ips": [
                  "10.43.67.193"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 9090,
                    "protocol": "TCP",
                    "target_port": "9090"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "prometheus"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.monitoring"
          ]
        }
      ]
    }
  ]
}